Make GetPath() work on jar: URIs, incidentally making it possible to use such as src uris for frames again.  Bug 220776, r=timeless, sr=darin